@@ -1,3 +1,12 @@
+Sun Jul 30 13:54:35 2000  Christopher Faylor <cgf@cygnus.com>
+
+	* fhandler_console.cc: Remove VK_DIVIDE detection.
+	(get_nonascii_key): Simplify previous patch to return ascii char if it
+	is non-zero.  Add a second "temporary buffer" argument to help with
+	thread safety.
+	* select.cc (peek_console): Pass a temporary buffer argument to
+	get_nonascii_key.
+
 Sat Jul 29 14:32:12 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* fhandler_console.cc: Add VK_DIVIDE detection.  Return virtual keycode
